tests/snapshots/cli_insta__filter.plain.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - filter-test
    - ">1"
    - 2.0.0
---
success: true
exit_code: 0
----- stdout -----
---
pass: true
----- stderr -----
